# voxel

./: .gitignore  CMakeLists.txt
project/: CMakeLists.txt  main.cpp  project.h
project/graphics/: shader.cpp  shader.h  texture.cpp  texture.h
project/hdr/: project.h
project/hdr/uni/: uni_debug.h  uni_types.h
project/loaders/: png_loading.cpp  png_loading.h
project/main/: constants.h  main.cpp  project.h
project/manager/: manager.cpp  manager.h  png_loading.cpp
project/src/: main.cpp
project/uni/: uni_debug.h  uni_types.h
project/uni/include/: uni_base_types.h  uni_debug.h  uni_func.h  uni_user_types.h
project/uni/source/: uni_func.cpp
project/window/: events.cpp  events.h  window.cpp  window.h
res/: CMakeLists.txt  main.glslf  main.glslv
res/resources/shaders/: fragment.glsl  vertex.glsl
res/shaders/: fragment.glsl  vertex.glsl
